# git-conventional-message

./: .gitignore  README.md  main.py  pyproject.toml
git_msg/: __init__.py  cli.py  config.py  git.py  llm.py
tests/: test_main.py
