[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "git-commit-msg"
version = "2.0.0"
description = "Generate conventional commit messages from staged git diffs using a local LLM"
requires-python = ">=3.8"

[project.scripts]
git-msg = "git_msg.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["git_msg*"]
